# honto-memo

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  package.json  wrangler.jsonc
.github/workflows/: ci.yml  deploy.yml
deploy/oracle/: honto-memo.nginx.conf  install_ubuntu.sh  redeploy.sh
public/: index.html  script.js  style.css
src/: main.rs  worker.js
systemd/: honki-memo.service
